--- a/hellonewmanreact/package.json
+++ b/hellonewmanreact/package.json
@@ -25,5 +25,7 @@
     "react": "^17.0",
     "react-dom": "^17.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "react-social-icons": "^4.1.0"
+  }
 }
