--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.1",
+    "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/client": "^2.2.6",
+    "@sanity/image-url": "^0.140.22",
     "@tailwindcss/typography": "^0.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
